# MyRender

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/draw_mesh/: CMakeLists.txt  main.cpp
include/: Camera.h  MainLoop.h  NavigationCamera.h  RenderMesh.h  Scene.h  System.h  Window.h
include/MyRender/: Camera.h  MainLoop.h  NavigationCamera.h  RenderMesh.h  Scene.h  System.h  Window.h
include/MyRender/shaders/: Shader.h  ShaderProgram.h  ShaderProgramLoader.h
include/MyRender/utils/: Mesh.h  PrimitivesFactory.h  Timer.h
include/shaders/: Shader.h  ShaderProgram.h  ShaderProgramLoader.h
include/utils/: Mesh.h  Timer.h
libs/: CMakeLists.txt
shaders/: BasicRender.frag  BasicRender.vert  RenderGrid.frag  RenderGrid.vert
src/: Camera.cpp  MainLoop.cpp  NavigationCamera.cpp  RenderMesh.cpp  Scene.cpp  Window.cpp
src/shaders/: SLangShader.h  Shader.cpp  ShaderProgram.cpp  ShaderProgramLoader.cpp
src/utils/: Mesh.cpp  PrimitivesFactory.cpp
